--- a/product-documentation/cdc/pots-addMoneyToPot-PUT.yaml
+++ b/product-documentation/cdc/pots-addMoneyToPot-PUT.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.0
 info:
   title: Pots API
   description: API for managing pots and adding money to them
@@ -7,11 +7,11 @@ info:
 paths:
   /pots/addMoneyToPot:
     put:
-      summary: Add money to an existing pot
-      description: Adds a specified amount of money to an existing pot.
+      summary: "Add money to an existing pot"
+      description: "Adds a specified amount of money to an existing pot."
       operationId: addMoneyToPot
       requestBody:
-        description: Details of the pot and the amount to be added
+        description: "Details of the pot and the amount to be added"
         required: true
         content:
           application/json:
@@ -20,21 +20,40 @@ paths:
               properties:
                 potName:
                   type: string
-                  description: The name of the pot
+                  description: "The name of the pot"
                   example: "Holiday"
                 amountToAdd:
                   type: integer
-                  description: The amount of money to add to the pot
+                  description: "The amount of money to add to the pot"
                   example: 1000
               required:
                 - potName
                 - amountToAdd
       responses:
         '200':
-          description: Money successfully added to Pot.
+          description: "Money successfully added to Pot."
         '404':
-          description: Pot not found.
+          description: "Pot not found."
         '500':
-          description: Server error occurred while adding money to pot.
+          description: "Server error occurred while adding money to pot."
+        '503':
+          description: "Failed to connect to the database."
       tags:
         - Pots
+
+components:
+  schemas:
+    APIPotAdditionDTO:
+      type: object
+      required:
+        - potName
+        - amountToAdd
+      properties:
+        potName:
+          type: string
+          description: "The name of the pot to which money will be added."
+          example: "Holiday"
+        amountToAdd:
+          type: integer
+          description: "The amount of money to be added to the pot."
+          example: 1000
