--- a/product-documentation/cdc/pots-deletePot-DELETE.yaml
+++ b/product-documentation/cdc/pots-deletePot-DELETE.yaml
@@ -2,16 +2,16 @@ openapi: 3.0.0
 info:
   title: Pots API
   version: 1.0.0
-  description: API zur Verwaltung von Budget-Pots
+  description: API for managing budget pots
 
 paths:
   /deletePot:
     delete:
-      summary: Delete an existing budget
-      description: Löscht einen bestehenden Pot basierend auf seinem Namen.
+      summary: "Delete an existing pot"
+      description: "Deletes an existing pot based on its name."
       operationId: deletePot
       requestBody:
-        description: Der Name des Pots, der gelöscht werden soll.
+        description: "The name of the pot to be deleted."
         required: true
         content:
           application/json:
@@ -19,19 +19,21 @@ paths:
               $ref: '#/components/schemas/APIPotNameDTO'
       responses:
         '204':
-          description: Pot erfolgreich gelöscht. Kein Inhalt wird zurückgegeben.
+          description: "Pot successfully deleted. No content is returned."
         '404':
-          description: Pot nicht gefunden.
+          description: "Pot not found."
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
         '500':
-          description: Serverfehler beim Löschen des Pots.
+          description: "Server error occurred while deleting the pot."
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '503':
+          description: "Failed to connect to the database."
 
 components:
   schemas:
@@ -40,7 +42,7 @@ components:
       properties:
         potName:
           type: string
-          description: Der Name des zu löschenden Pots.
+          description: "The name of the pot to be deleted."
           example: 'Holiday'
 
     ErrorResponse:
@@ -54,4 +56,4 @@ components:
           example: 'Error while deleting pot: Database error'
         error:
           type: string
-          example: Internal Server Error
+          example: 'Internal Server Error'
