--- a/product-documentation/cdc/pots-editPot-PUT.yaml
+++ b/product-documentation/cdc/pots-editPot-PUT.yaml
@@ -2,17 +2,17 @@ openapi: 3.0.0
 info:
   title: Pots API
   version: 1.0.0
-  description: API zur Verwaltung von Pots (z.B. Sparziele)
+  description: API for managing pots (e.g., savings goals)
 
 paths:
   /pots/editPot:
     put:
-      summary: Edit an existing pot
-      operationId: editPot
+      summary: "Edit an existing pot"
+      operationId: "editPot"
       tags:
         - Pots
       requestBody:
-        description: Details des zu bearbeitenden Pots
+        description: "Details of the pot to be edited"
         required: true
         content:
           application/json:
@@ -20,11 +20,13 @@ paths:
               $ref: '#/components/schemas/APIEditedPotDTO'
       responses:
         '200':
-          description: Pot successfully updated.
+          description: "Pot successfully updated."
         '404':
-          description: Pot not found.
+          description: "Pot not found."
         '500':
-          description: Server error occurred while editing pot.
+          description: "Server error occurred while editing pot."
+        '503':
+          description: "Failed to connect to the database."
 
 components:
   schemas:
@@ -40,22 +42,22 @@ components:
         id:
           type: integer
           example: 1
-          description: Die eindeutige ID des Pots.
+          description: "The unique ID of the pot."
         name:
           type: string
           example: "Holiday"
-          description: Der Name des Pots.
+          description: "The name of the pot."
         target:
           type: number
           format: float
           example: 3000.0
-          description: Das Zielguthaben des Pots.
+          description: "The target balance of the pot."
         total:
           type: number
           format: float
           example: 2000.0
-          description: Der aktuelle Kontostand des Pots.
+          description: "The current balance of the pot."
         theme:
           type: string
           example: "#277C78"
-          description: Die Farbthematik des Pots.
+          description: "The color theme of the pot."
