--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "./node_modules/.bin/nest build && cp ./src/apis/balance/balance.data.json ./dist/apis/balance/balance.data.json && cp ./src/apis/transactions/transactions.data.json ./dist/apis/transactions/transactions.data.json && cp ./src/apis/pots/pots.data.json ./dist/apis/pots/pots.data.json && cp ./src/apis/budget/budget.data.json ./dist/apis/budget/budget.data.json",
+    "build": "./node_modules/.bin/nest build",
     "format": "./node_modules/.bin/prettier --write \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"/src/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\" \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"./test/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"",
     "start": "npm run build && node dist/main.js",
     "start:dev": "./node_modules/.bin/nest start --watch",
