--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-spawn": "^7.0.5",
     "joi": "^17.13.3",
+    "path-to-regexp": "^0.1.12",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
