do-10 grype test 2

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -421,10 +421,16 @@ jobs:
       - name: Authenticate GitHub Container Registry
         run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Scan image with gripe
-        uses: anchore/scan-action@v6
-        with:
-          image: "registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}"
+#      - name: Scan image with grype
+#        uses: anchore/scan-action@v6
+#        with:
+#          image: "registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}"
+
+      - name: setup grype
+        run: curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+
+      - name: Scan image with grype
+        run: grype registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}
 
   frontend-e2e-tests:
     timeout-minutes: 60
