do-10 grype test frontend

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -337,6 +337,47 @@ jobs:
       - name: Scan Frontend Docker Image
         run: ./bin/trivy image --exit-code 1 --severity HIGH,CRITICAL registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
 
+
+  frontend-grype-scan:
+    runs-on: ubuntu-latest
+
+    needs: frontend-build
+
+    continue-on-error: true
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 1200
+
+      - name: Download PACKAGE_VERSION_FRONTEND Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: PACKAGE_VERSION_FRONTEND
+          path: .
+
+      - name: Read PACKAGE_VERSION_FRONTEND
+        id: read_package_version
+        run: |
+          PACKAGE_VERSION_FRONTEND=$(cat PACKAGE_VERSION_FRONTEND)
+          echo "PACKAGE_VERSION_FRONTEND=$PACKAGE_VERSION_FRONTEND" >> $GITHUB_ENV
+
+      - name: Pull image from registry
+        run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
+
+      - name: Setup Grype
+        run: curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+
+      - name: Scan image with Grype
+        run: grype registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
+
   backend-trivy-scan:
     runs-on: ubuntu-latest
 
@@ -421,15 +462,10 @@ jobs:
       - name: Authenticate GitHub Container Registry
         run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-#      - name: Scan image with grype
-#        uses: anchore/scan-action@v6
-#        with:
-#          image: "registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}"
-
-      - name: setup grype
+      - name: Setup Grype
         run: curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
 
-      - name: Scan image with grype
+      - name: Scan image with Grype
         run: grype registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}
 
   frontend-e2e-tests:
