--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -324,9 +324,6 @@ jobs:
       - name: Pull image from registry
         run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
 
-      - name: Authenticate GitHub Container Registry
-        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
       - name: Set up Trivy
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -
@@ -336,7 +333,6 @@ jobs:
 
       - name: Scan Frontend Docker Image
         run: ./bin/trivy image --exit-code 1 --severity HIGH,CRITICAL registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
 
   frontend-grype-scan:
     runs-on: ubuntu-latest
@@ -372,11 +368,10 @@ jobs:
       - name: Pull image from registry
         run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
 
-      - name: Setup Grype
-        run: curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
-
-      - name: Scan image with Grype
-        run: grype registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
+      - name: Scan image
+        uses: anchore/scan-action@v6
+        with:
+          image: "registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}"
 
   backend-trivy-scan:
     runs-on: ubuntu-latest
@@ -411,9 +406,6 @@ jobs:
 
       - name: Pull image from registry
         run: docker pull registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}
-
-      - name: Authenticate GitHub Container Registry
-        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Set up Trivy
         run: |
@@ -472,7 +464,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: frontend-trivy-scan
+    needs: [frontend-trivy-scan, frontend-grype-scan]
 
     steps:
       - uses: actions/checkout@v4
@@ -532,7 +524,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: frontend-trivy-scan
+    needs: [frontend-trivy-scan, frontend-grype-scan]
 
     steps:
       - uses: actions/checkout@v4
