--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -354,9 +354,23 @@ jobs:
 
       - name: Scan image with Grype
         uses: anchore/scan-action@v6
+        continue-on-error: true
+        id: grype_scan
         with:
           image: "registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}"
           output-format: table
+          output-file: GRYPE_SCAN_FRONTEND.txt
+
+      - name: Upload results as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: GRYPE_SCAN_FRONTEND.txt
+          path: GRYPE_SCAN_FRONTEND.txt
+          retention-days: 7
+
+      - name: Fail if Grype Scan Failed
+        if: steps.grype_scan.outcome == 'failure'
+        run: exit 1
 
   backend-trivy-scan:
     runs-on: ubuntu-latest
@@ -438,15 +452,29 @@ jobs:
 
       - name: Scan image with Grype
         uses: anchore/scan-action@v6
+        continue-on-error: true
+        id: grype_scan
         with:
           image: "registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}"
           output-format: table
+          output-file: GRYPE_SCAN_BACKEND.txt
+
+      - name: Upload results as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: GRYPE_SCAN_FRONTEND.txt
+          path: GRYPE_SCAN_FRONTEND.txt
+          retention-days: 7
+
+      - name: Fail if Grype Scan Failed
+        if: steps.grype_scan.outcome == 'failure'
+        run: exit 1
 
   frontend-e2e-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: frontend-trivy-scan
+    needs: [frontend-trivy-scan, frontend-grype-scan]
 
     steps:
       - uses: actions/checkout@v4
@@ -506,7 +534,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: frontend-trivy-scan
+    needs: [frontend-trivy-scan, frontend-grype-scan]
 
     steps:
       - uses: actions/checkout@v4
@@ -628,7 +656,7 @@ jobs:
   frontend-deploy:
     runs-on: ubuntu-latest
     
-    needs: [frontend-e2e-tests, frontend-gui-tests, backend-trivy-scan]
+    needs: [frontend-e2e-tests, frontend-gui-tests, backend-trivy-scan, backend-grype-scan]
 
     steps:
       - name: Checkout master
@@ -678,7 +706,7 @@ jobs:
   backend-deploy:
     runs-on: ubuntu-latest
 
-    needs: [backend-trivy-scan, frontend-e2e-tests, frontend-gui-tests]
+    needs: [frontend-e2e-tests, frontend-gui-tests, backend-trivy-scan, backend-grype-scan]
 
     steps:
       - name: Checkout master
