--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set Build Tag
         id: build_tag
@@ -46,7 +46,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set Build Tag
         id: build_tag
@@ -82,7 +82,7 @@ jobs:
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: Install Dependencies
         run: |
@@ -101,7 +101,7 @@ jobs:
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: Install Dependencies
         run: |
@@ -120,7 +120,7 @@ jobs:
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: Install Dependencies
         run: |
@@ -209,7 +209,7 @@ jobs:
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: Download PACKAGE_VERSION_FRONTEND Artifact
         uses: actions/download-artifact@v4
@@ -246,7 +246,7 @@ jobs:
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: Download PACKAGE_VERSION_BACKEND Artifact
         uses: actions/download-artifact@v4
@@ -283,7 +283,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -327,7 +327,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -364,7 +364,7 @@ jobs:
       - name: Upload results as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: GRYPE_SCAN_FRONTEND.txt
+          name: GRYPE_SCAN_FRONTEND
           path: GRYPE_SCAN_FRONTEND.txt
           retention-days: 7
 
@@ -381,7 +381,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -425,7 +425,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -462,7 +462,7 @@ jobs:
       - name: Upload results as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: GRYPE_SCAN_FRONTEND.txt
+          name: GRYPE_SCAN_FRONTEND
           path: GRYPE_SCAN_FRONTEND.txt
           retention-days: 7
 
@@ -470,11 +470,46 @@ jobs:
         if: steps.grype_scan.outcome == 'failure'
         run: exit 1
 
+  codeql-scan:
+    runs-on: ubuntu-latest
+
+    needs: [ backend-trivy-scan, backend-grype-scan, frontend-trivy-scan, frontend-grype-scan ]
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Install CodeQL CLI
+        run: |
+          wget https://github.com/github/codeql-cli-binaries/releases/latest/download/codeql-linux64.zip
+          unzip codeql-linux64.zip -d codeql
+          echo "$PWD/codeql" >> $GITHUB_PATH
+
+      - name: Create CodeQL Database for JavaScript and TypeScript
+        run: |
+          codeql database create codeql-db --language=javascript --source-root=.
+
+      - name: Analyze with CodeQL
+        run: |
+          codeql database analyze codeql-db --format=sarifv2.1.0 --output=codeql-results.sarif
+
+      - name: Upload CodeQL Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: codeql-results
+          path: codeql-results.sarif
+          retention-days: 7
+
+      - name: Upload SARIF to GitHub Security Tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: codeql-results.sarif
+
   frontend-e2e-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: [frontend-trivy-scan, frontend-grype-scan]
+    needs: codeql-scan
 
     steps:
       - uses: actions/checkout@v4
@@ -534,7 +569,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: [frontend-trivy-scan, frontend-grype-scan]
+    needs: codeql-scan
 
     steps:
       - uses: actions/checkout@v4
@@ -656,11 +691,11 @@ jobs:
   frontend-deploy:
     runs-on: ubuntu-latest
     
-    needs: [frontend-e2e-tests, frontend-gui-tests, backend-trivy-scan, backend-grype-scan]
+    needs: [frontend-e2e-tests, frontend-gui-tests]
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
   
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -706,11 +741,11 @@ jobs:
   backend-deploy:
     runs-on: ubuntu-latest
 
-    needs: [frontend-e2e-tests, frontend-gui-tests, backend-trivy-scan, backend-grype-scan]
+    needs: [frontend-e2e-tests, frontend-gui-tests]
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
