--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -499,7 +499,7 @@ jobs:
         run: |
           wget https://github.com/github/codeql-cli-binaries/releases/latest/download/codeql-linux64.zip
           unzip codeql-linux64.zip -d codeql
-          echo "$PWD/codeql" >> $GITHUB_PATH
+          echo "$PWD/codeql/codeql" >> $GITHUB_PATH
 
       - name: Create CodeQL Database for JavaScript and TypeScript
         run: |
@@ -520,6 +520,23 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: codeql-results.sarif
+
+  gitleaks-scan:
+    name: gitleaks
+    runs-on: ubuntu-latest
+
+    needs: [backend-trivy-scan, backend-grype-scan, frontend-trivy-scan, frontend-grype-scan]
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Analyze with Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   frontend-e2e-tests:
     timeout-minutes: 60
@@ -647,7 +664,7 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: frontend-gui-tests
-    if: failure()
+    if: needs.frontend-gui-tests.result == 'failure'
 
     steps:
       - uses: actions/checkout@v4
