--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -498,12 +498,16 @@ jobs:
       - name: Install CodeQL CLI
         run: |
           wget https://github.com/github/codeql-cli-binaries/releases/latest/download/codeql-linux64.zip
-          unzip codeql-linux64.zip -d codeql
-          echo "$PWD/codeql/codeql" >> $GITHUB_PATH
+          unzip codeql-linux64.zip -d $PWD
+          echo "$PWD/codeql" >> $GITHUB_PATH
+
+      - name: list items
+        run: |
+          ls
 
       - name: Install JavaScript Query Pack
         run: |
-          codeql pack install javascript
+          codeql pack install codeql/javascript-queries
 
       - name: Create CodeQL Database for JavaScript and TypeScript
         run: |
@@ -526,7 +530,6 @@ jobs:
           sarif_file: codeql-results.sarif
 
   gitleaks-scan:
-    name: gitleaks
     runs-on: ubuntu-latest
 
     needs: [backend-trivy-scan, backend-grype-scan, frontend-trivy-scan, frontend-grype-scan]
