--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -503,7 +503,7 @@ jobs:
           # Optional: Build-Modus, wenn du manuelle Build-Schritte hast
           build-mode: 'autobuild'
           # Optional: Registriere zusätzliche CodeQL-Pakete, falls benötigt
-          packs: 'javascript-queries'
+#          packs: 'javascript-queries'
 
       - name: Finalize CodeQL Database and Upload Results
         uses: github/codeql-action/analyze@v3
